# swagger-pet-store-rust

./: Cargo.toml  README.md  petstore.yaml
src/: main.rs
