[package]
name = "swagger-pet-store-rust"
version = "0.1.0"
authors = ["Philippe Vinchon <p.vinchon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1.28"
hyper = "0.12.33"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
